Fix patron button on Firefox

--- a/src/styles/_patreon.scss
+++ b/src/styles/_patreon.scss
@@ -14,7 +14,7 @@
   filter: saturate(1.5);
 }
 .Ubsnp {
-  width: 11rem;
+  width: 12rem;
 }
 .bVyoVa {
   text-decoration: none !important;
